# japanese-speech-analysis

./: .gitignore  .gitmodules  README.md  check_models.py  compare.py  demo.py  fluency.py  phase2_single_test.py  phase3_batch.py  pyproject.toml  report.md  results.csv  transcribe.py  transcriber_a.py  調査レポート_流暢度・音節検出.md  週次レポート_流暢度分析_20260612.md
